# LlamaPajamas

./: .env.example  .gitignore  ARCHITECTURE-AWARE-QUANTIZATION.md  CLI-IMPLEMENTATION-SUMMARY.md  CONTRIBUTING.md  LICENSE  LLAMA_PAJAMAS_BREAKDOWN.md  OVERVIEW.md  QUICK-START.md  README.md
quant/: BENCHMARK_GUIDE.md  DEPLOYMENT.md  README.md  TENSORRT-EXPORT-GUIDE.md  main.py  pyproject.toml  run_benchmarks.py  run_evaluation.py  test_detector.py  test_dual_format.py  test_gguf_conversion.py  test_judge_api.py
quant/calibration_data/: README.md  calibration.txt  calibration_metadata.json  evaluation.txt
quant/calibration_data/domains/: calibration_general.txt  calibration_medical.txt  calibration_military.txt  calibration_rag.txt  calibration_summarization.txt  calibration_tone_analysis.txt  calibration_tool_calling.txt
quant/config/: hardware_profiles.json
quant/docs/: BENCHMARK_RESULTS.md  EVALUATION_GUIDE.md  LMEVAL_INTEGRATION.md  QUANTIZATION_COMPARISON.md  UPDATED_FOR_SUBDIRS.md  VALIDATION_REPORT.md
quant/evaluation/: README.md  compare_models.py
quant/evaluation/llm/: benchmark_models.py  extended_questions.json  llm_judge.py  prompts.json  questions.json  run_eval.py  run_eval_strict.py  run_llm_eval.py
quant/evaluation/stt/: README.md  dataset.json  download_audio.py  run_eval.py  test_samples.json
quant/evaluation/tensorrt/: README.md  benchmark_llm.py
quant/evaluation/vision/: dataset.json  download_dataset.py
quant/evaluation/vision/images/: dataset_metadata.json
quant/examples/: README.md  batch-config.yaml  batch-iq-config.yaml  test-iq-workflow.sh
quant/llama_pajamas_quant/: __init__.py  benchmarks.py  evaluator.py  simple_benchmarks.py  summarization_calibration.py  tool_calling_calibration.py
quant/llama_pajamas_quant/calibration/: __init__.py  medical.py  military.py  rag.py  synthetic_generator.py  tone_analysis.py
quant/llama_pajamas_quant/cli/: __init__.py  main.py  utils.py
quant/llama_pajamas_quant/cli/commands/: __init__.py  batch.py  (+6 more)
quant/llama_pajamas_quant/converters/: __init__.py  gguf.py  mlx.py  onnx.py
quant/llama_pajamas_quant/core/: __init__.py  architecture.py  detector.py  llama_cpp_builder.py  manifest.py  quantizer.py  runtime_config.py
quant/llama_pajamas_quant/exporters/: __init__.py  onnx_vision.py
quant/llama_pajamas_quant/optimizers/: __init__.py  onnx_graph.py  onnx_quant.py
quant/llama_pajamas_quant/quantizers/: __init__.py  coreml_vision.py  imatrix.py  whisper_coreml.py
quant/llama_pajamas_quant/tools/: __init__.py  binary_wrapper.py
quant/scripts/: EVALUATION_README.md  benchmark_performance.py  build_calibration_data.py  build_tensorrt_engine.sh  compare_all_quantizations.py  compare_evaluations.py  detect_hardware.py  direct_export_calibration.py  evaluate_baseline.py  evaluate_model.py  export_coreml_quantized.py  export_domain_calibration.py  export_model.py  export_onnx_speech.py  export_tensorrt_llm.py  export_tensorrt_vision.py  export_whisper_coreml.py  fix_yolo_manifest.py  generate_runtime_config.py  generate_stt_comparison.py  quantize_coreml_vision.py  quantize_onnx.py  quantize_qwen3_3bit.py  quantize_whisper_coreml.py  quantize_with_evaluation.py  quantize_with_imatrix.py  quick_eval_demo.py  run_benchmarks.py  run_benchmarks_with_servers.py  simple_export_calibration.py  test_calibration_domains.py  update_manifests_int8.py  update_whisper_manifests_int8.py  validate_quality.py
quant/tests/: .gitignore  README.md  check_environment.py  run_e2e_tests.py  test_dual_format.py  test_e2e_llm.py  test_e2e_speech.py  test_e2e_vision.py  test_evaluation.py  test_runtime_e2e.py  test_simple_gguf.py
quant/ui/: package.json
quant/ui/app/: globals.css  layout.tsx
run/: HARDWARE_README.md  README.md  llama-pajamas-run  main.py  pyproject.toml  test_gguf.py  test_runtime.py
run-core/: pyproject.toml
run-core/llama_pajamas_run_core/: __init__.py  config.py  model_loader.py  server.py  server_multimodal.py
run-core/llama_pajamas_run_core/backends/: __init__.py  base.py  speech_base.py  vision_base.py
run-core/llama_pajamas_run_core/utils/: __init__.py  audio_utils.py  vision_utils.py
run-coreml/: API_EXAMPLES.md  README.md  benchmark_vision.py  download_evaluation_dataset.py  evaluate_comprehensive.py  evaluate_model.py  evaluate_vision_models.py  pyproject.toml  test_all_vision_tasks.py  test_api_integration.py  test_converters.py  test_models_end_to_end.py  test_vision_all_models.py  test_vision_backend.py  test_vision_coreml_all.py
run-coreml/benchmarks/: benchmark_results.json
run-coreml/custom_evaluation/: model_evaluation.json
run-coreml/evaluation_results/: comprehensive_evaluation.json
run-coreml/examples/: crossmodal_pipeline_demo.py  multimodal_client_demo.py  multimodal_server_demo.py  unified_server_demo.py
run-coreml/llama_pajamas_run_coreml/: __init__.py  __main__.py  server.py
run-coreml/llama_pajamas_run_coreml/backends/: __init__.py  speech_stt.py  speech_tts.py  stt.py  tts_system.py  vision.py
run-coreml/llama_pajamas_run_coreml/converters/: __init__.py  base.py  vision.py
run-coreml/llama_pajamas_run_coreml/utils/: __init__.py
run-gguf/: pyproject.toml  test_gguf_runtime.py
run-gguf/llama_pajamas_run_gguf/: __init__.py  __main__.py  backend.py
run-mlx/: pyproject.toml  test_mlx_runtime.py
run-mlx/llama_pajamas_run_mlx/: __init__.py  __main__.py  backend.py
run-onnx/: README.md  pyproject.toml
run-onnx/examples/: test_onnx_vision.py
run-onnx/llama_pajamas_run_onnx/: __init__.py  session.py
run-onnx/llama_pajamas_run_onnx/backends/: __init__.py  base.py  coreml_backend.py  cpu_backend.py  speech.py  tensorrt_backend.py  vision.py
run-tensorrt/: README.md  pyproject.toml
run-tensorrt/llama_pajamas_run_tensorrt/: __init__.py
run-tensorrt/llama_pajamas_run_tensorrt/backends/: __init__.py  llm.py  vision.py
run/examples/: simple_usage.py
run/llama_pajamas_run/: __init__.py  benchmarks.py  cli.py  config.py  manifest_loader.py  model_loader.py
run/llama_pajamas_run/backends/: __init__.py  gguf_backend.py  mlx_backend.py
(+75 files in other folders)
