[project]
name = "llama-pajamas-run-gguf"
version = "0.1.0"
description = "GGUF runtime for Llama-Pajamas (Universal: CPU/CUDA/Metal/ROCm)"
requires-python = ">=3.12"
dependencies = [
    "llama-pajamas-run-core",
    "llama-cpp-python>=0.2.0",
]

[project.scripts]
llama-pajamas-gguf = "llama_pajamas_run_gguf.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llama-pajamas-run-core = { path = "../run-core", editable = true }

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
