[project]
name = "llama-pajamas-run-mlx"
version = "0.1.0"
description = "MLX runtime for Llama-Pajamas (Apple Silicon only)"
requires-python = ">=3.12"
dependencies = [
    "llama-pajamas-run-core",
    "mlx>=0.19.0",
    "mlx-lm>=0.19.0",
]

[project.scripts]
llama-pajamas-mlx = "llama_pajamas_run_mlx.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llama-pajamas-run-core = { path = "../run-core", editable = true }
